14. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- set default rights for archive file on import properly
	- set last used dir on adddialog if type is not cd/dvd
	- use implicit font metrics local member instead creating on heap at progressdialog
	- scanning archives using lib7zip fixed
	- type conversion for permission string fixed

12. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- version increased to 1.7

04. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- display archive contents at commwidget in better formated way
	- commwidget space issuses fixes
	- repaint commwidget only if nessary
	- qtlogo on tool button and menu entry fixed
	- category display at commwidget fixed
	- limited tag support at whereisit import (will be added to comment)
	- csv import from whereisit within multiple disks fixed (thanks to blueday)
	- set last used dir on import dialog
	- set last used dir if last dir is not set to home dir at export dialog
	- duplicate file search inside catalog added (use context menu entry on a file node)
	- jump to selected file in duplicate result list if user clicked on it added
	- skip adding file which is looked up for duplicates in result list
	- font size of archive contents at commwidget fixed
	- insert catalog into existing catalog fixed
	- insert catalog into existing catalog with duplicate check prepared for future

03. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- scanning archve files on subfolder fixed (#3484430)

29. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- wrong disable of fileinfo if readmp3 info is disabled fixed
	- comment missing from results page when searching fixed (#3480282)
	- displaying multiline comments correctly in search result list
	- tb size unit display at search dialog added
	- mediainfo/lib7zip build fixes
	- typo fixed
	- display supported archive extensions if lib7zip is disabled fixed
	- display header line for archive contents in commwidget
	- display lib7zip state more informative