@@ -1,3 +1,7 @@
+15. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
+	- archive line parsing fixed on lib7zip created archive contents
+	- obsolete tab in generated archive file content on commwidget removed
+
 14. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
 	- set default rights for archive file on import properly
 	- set last used dir on adddialog if type is not cd/dvd
